# example-package-certifiedp

./: pyproject.toml
example_package_certifiedp-0.1.0/: LICENSE  README.md
example_package_certifiedp-0.1.0/tests/: test_rescale.py
src/example_package_certifiedp/: _version.py
wheel/example_package_certifiedp-0.1.0.dist-info/: METADATA  RECORD
