# contents of pyproject.toml

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "example-package-certifiedp"
dynamic = ["version"]
dependencies = [
  "numpy",
]

authors = [
  { name="Marc Karimi", email="mkarim117@berkeley.edu" },
]

description = "A package I've been working on for INTERSECT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Source Code" = "https://github.com/certifiedp/example-package-certifiedp"

[tool.hatch]
version.path = "src/example_package_certifiedp/__init__.py"